add dockerfile para deploy

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,3 +21,18 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+
+  ms-email:
+    build:
+      dockerfile: ./Dockerfile
+      context: .
+    container_name: ms-email
+    image: ot-bank/email
+    ports:
+      - 8081:8080
+    depends_on:
+      - kafka
+    environment:
+      KAFKA_HOST: "http://kafka:9092"
+      KAFKA_CONSUMER_GROUP_ID: "ms-email"
+      KAFKA_AUTO-OFFSET-RESET: "latest"
